fix: Image & Font of MatGridList Component

--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,12 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
-                "glob": "**/*",
+                "glob": "/*",
+                "input": "src/assets",
+                "output": "/assets"
+              },
+              {
+                "glob": "/*",
                 "input": "public"
               }
             ],
